--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi[standard]>=0.115.12",
     "google-auth>=2.40.3",
+    "lxml>=6.0.0",
     "pyjwt>=2.10.1",
     "pymongo>=4.13.2",
     "python-dotenv>=1.1.0",
